--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,6 +7,7 @@ body {
     color: white;
 }
 
+/*HEADER SECTION*/
 .company {
     display: flex;
     width: 100%;
@@ -20,7 +21,6 @@ body {
     display: flex;
     align-items: center;
     width: 960px;
-    padding: 12px;
     border: 3px solid blue;
 }
 
@@ -33,4 +33,42 @@ body {
     font-size: 1rem;
     padding: 0.66rem 1rem;
     min-width: 275px;
+}
+
+/*BANNER SECTION*/
+.banner {
+    display: flex;
+    height: 25rem;
+    width: 100%;
+    justify-content: center;
+    background-image: url(../images/moto.jpeg);
+    background-size: cover;
+    background-position: center;
+    border: 3px solid orange;
+}
+
+.splash {
+    display: flex;
+    width: 960px;
+    border: 3px solid yellow;
+}
+
+.headline {
+    height: 11rem;
+    width: 25rem;
+    margin-top: 9rem;
+    background-color: black;
+}
+
+.headline h4{
+    font-size: 1rem;
+    font-weight: bold;
+    margin: 2.5rem auto 1rem 3rem;
+}
+
+.headline h1 {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-left: 3rem;
+    margin-right: 0;
 }
