--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,6 @@
 html {
     font-size: 18px;
 }
-
 body {
     font-family: Helvetica;
     color: white;
@@ -16,19 +15,16 @@ body {
     justify-content: center;
     border: 3px solid red;
 }
-
 .logo {
     display: flex;
     align-items: center;
     width: 960px;
     border: 3px solid blue;
 }
-
 .logo img {
     height: 1.5rem;
     margin-left: .5rem;
 }
-
 .logo span {
     font-size: 1rem;
     padding: 0.66rem 1rem;
@@ -46,29 +42,42 @@ body {
     background-position: center;
     border: 3px solid orange;
 }
-
 .splash {
     display: flex;
     width: 960px;
     border: 3px solid yellow;
 }
-
 .headline {
     height: 11rem;
     width: 25rem;
     margin-top: 9rem;
     background-color: black;
 }
-
 .headline h4{
     font-size: 1rem;
     font-weight: bold;
     margin: 2.5rem auto 1rem 3rem;
 }
-
 .headline h1 {
     font-size: 2rem;
     font-weight: bold;
     margin-left: 3rem;
     margin-right: 0;
+}
+
+/*NAVIGATION SECTION*/
+.navigation {
+    display: flex;
+    background-color: firebrick;
+    height: 2.5rem;
+    width: 100%;
+    justify-content: center;
+}
+nav {
+    display: flex;
+    flex-direction: row;
+    width: 960px;
+    align-items: center;
+    justify-content: space-between;
+    border: 3px solid black;
 }
