--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -155,3 +155,19 @@ nav {
     display: block;
     padding-top: .25rem;
 }
+
+/*FOOTER SECTION*/
+.footer {
+    display: flex;
+    height: 10rem;
+    width: 100%;
+    background-color: black;
+    justify-content: center;
+}
+.text-content {
+    display: flex;
+    align-items: center;
+    width: 960px;
+    border: 3px solid white;
+
+}
