--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -27,7 +27,7 @@ body {
 }
 .logo span {
     font-size: 1rem;
-    padding: 0.66rem 1rem;
+    padding: 0.66rem .75rem;
     min-width: 275px;
 }
 
@@ -81,6 +81,9 @@ nav {
     justify-content: space-between;
     border: 3px solid black;
 }
+nav span2 {
+    display: none;
+}
 
 /*STORE SECTION*/
 .store {
@@ -102,7 +105,7 @@ nav {
     flex-direction: column;
     align-items: center;
     height: 15rem;
-    width: 15rem;
+    width: 30%;
     border: 4px solid black;
 }
 .item img {
@@ -169,5 +172,38 @@ nav {
     align-items: center;
     width: 960px;
     border: 3px solid white;
+}
 
+/*1024 MEDIA QUERY*/
+@media only screen and (max-width: 1024px) {
+    .logo img {
+        height: 1.25rem;
+    }
+    .logo span {
+        font-size: 16px;
+    }
+    .banner {
+        height: 22rem;
+    }
+    .headline {
+        width: 22rem;
+        margin-top: 7rem;
+    }
+    .headline h4 {
+        font-size: .85rem;
+        margin-left: 2rem;
+    }
+    .headline h1 {
+        font-size: 1.75rem;
+        margin-left: 2rem;
+    }
+    nav span {
+        display: none;
+    }
+    nav {
+        justify-content: center;
+    }
+    nav span2 {
+        display: block;
+    }
 }
