--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,13 +13,13 @@ body {
     height: 2.32rem;
     background-color: black;
     justify-content: center;
-    border: 3px solid red;
+    /*border: 3px solid red;*/
 }
 .logo {
     display: flex;
     align-items: center;
     width: 960px;
-    border: 3px solid blue;
+    /*border: 3px solid blue;*/
 }
 .logo img {
     height: 1.5rem;
@@ -40,12 +40,12 @@ body {
     background-image: url(../images/moto.jpeg);
     background-size: cover;
     background-position: center;
-    border: 3px solid orange;
+    /*border: 3px solid orange;*/
 }
 .splash {
     display: flex;
     width: 960px;
-    border: 3px solid yellow;
+    /*border: 3px solid yellow;*/
 }
 .headline {
     height: 11rem;
@@ -79,7 +79,7 @@ nav {
     width: 960px;
     align-items: center;
     justify-content: space-between;
-    border: 3px solid black;
+    /*border: 3px solid black;*/
 }
 nav span2 {
     display: none;
@@ -89,7 +89,7 @@ nav span2 {
 .store {
     display: flex;
     justify-content: center;
-    border: 3px solid aqua;
+    /*border: 3px solid aqua;*/
 }
 .items {
     display: flex;
@@ -98,7 +98,7 @@ nav span2 {
     width: 960px;
     justify-content: space-between;
     align-items: center;
-    border: 4px solid yellow;
+    /*border: 4px solid yellow;*/
 }
 .item {
     display: flex;
@@ -119,7 +119,7 @@ nav span2 {
     height: 2rem;
     text-align: center;
     padding-top: .5rem;
-    border: 2px solid green;
+    /*border: 2px solid green;*/
 }
 #glasses img {
     height: 4rem;
@@ -133,14 +133,14 @@ nav span2 {
     justify-content: center;
     height: 8rem;
     width: 100%;
-    border: 3px solid red;
+    /*border: 3px solid red;*/
 }
 .info {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     width: 960px;
-    border: 3px solid blue;
+    /*border: 3px solid blue;*/
 }
 .location, .hours{
     width: 35%;
@@ -171,7 +171,7 @@ nav span2 {
     display: flex;
     align-items: center;
     width: 960px;
-    border: 3px solid white;
+    /*border: 3px solid white;*/
 }
 
 /*1024px MEDIA QUERY*/
